Начал работу над шапкой

--- a/css/base/_root.scss
+++ b/css/base/_root.scss
@@ -1,4 +1,3 @@
-
 :root {
   --font-family: "Inter", sans-serif;
   --second-family: "Manrope", sans-serif;
@@ -15,46 +14,49 @@
   --softPeach: #fee5bc;
 
   --white: #fff;
+  --white-08: rgba(255, 255, 255, 0.8);
+  --white-07: rgba(255, 255, 255, 0.7);
+  --white-06: rgba(255, 255, 255, 0.6);
+  --white-03: rgba(255, 255, 255, 0.3);
+  --white-02: rgba(255, 255, 255, 0.2);
+  --white-01: rgba(255, 255, 255, 0.1);
+  --white-005: rgba(255, 255, 255, 0.05);
   --black: #000;
 }
 
 // :root {
 
 
-  // --green: #60ea05;
-  // --violet: #7e5af0;
-  // --white-08: rgba(255, 255, 255, 0.8);
-  // --white-07: rgba(255, 255, 255, 0.7);
-  // --white-06: rgba(255, 255, 255, 0.6);
-  // --white-03: rgba(255, 255, 255, 0.3);
-  // --white-02: rgba(255, 255, 255, 0.2);
-  // --grey: #ddd;
-  //
-  // --balck-02: rgba(0, 0, 0, 0.2);
-  // --balck-07: rgba(0, 0, 0, 0.7);
-  // --line: #d2cedb;
-  // --text: #49484b;
+// --green: #60ea05;
+// --violet: #7e5af0;
 
-  // --brand: #ece8f6;
-  // --brand-07: rgba(236, 232, 246, 0.7);
+// --grey: #ddd;
+//
+// --balck-02: rgba(0, 0, 0, 0.2);
+// --balck-07: rgba(0, 0, 0, 0.7);
+// --line: #d2cedb;
+// --text: #49484b;
 
-  // --header-height: 98px;
+// --brand: #ece8f6;
+// --brand-07: rgba(236, 232, 246, 0.7);
 
-  // --modal-bg: rgba(51, 52, 65, 0.7);
-  // --modal-icon: #7e5af0;
-  // --modal-hover: #c08f53;
-  // --modal-text: --text;
-  // --modal-body: #333441;
-  // --modal-border: var(--white-02);
+// --header-height: 98px;
 
-  // Слайдеры
-  // --swiper-navigation-size: 96px;
-  // --swiper-pagination-color: #ffffff;
-  // --swiper-pagination-bullet-inactive-color: #ffffff;
-  // --swiper-pagination-bullet-inactive-opacity: 0.5;
-  // --swiper-pagination-bullet-vertical-gap: 16px;
-  // --swiper-scrollbar-drag-bg-color: #60ea05;
-  // --swiper-navigation-sides-offset: 0;
+// --modal-bg: rgba(51, 52, 65, 0.7);
+// --modal-icon: #7e5af0;
+// --modal-hover: #c08f53;
+// --modal-text: --text;
+// --modal-body: #333441;
+// --modal-border: var(--white-02);
+
+// Слайдеры
+// --swiper-navigation-size: 96px;
+// --swiper-pagination-color: #ffffff;
+// --swiper-pagination-bullet-inactive-color: #ffffff;
+// --swiper-pagination-bullet-inactive-opacity: 0.5;
+// --swiper-pagination-bullet-vertical-gap: 16px;
+// --swiper-scrollbar-drag-bg-color: #60ea05;
+// --swiper-navigation-sides-offset: 0;
 
 // @media (max-width: 1279px) {
 //   --swiper-navigation-size: 88px;
