--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,7 @@
 @import "./sections/sections-group";
 @import "./sections/mobile-nav";
 
+@import "./sections/hero";
 @import "./sections/steps";
 
 @import "./sections/footer";
