--- a/css/sections/_header.scss
+++ b/css/sections/_header.scss
@@ -2,6 +2,9 @@
   transition: all 0.3s;
   background-color: var(--balck);
   color: var(--white);
+  position: fixed;
+  width: 100%;
+  top: 0;
 
   font-size: 14px;
   position: fixed;
