--- a/css/main.css
+++ b/css/main.css
@@ -836,6 +836,9 @@ textarea {
   transition: all 0.3s;
   background-color: var(--balck);
   color: var(--white);
+  position: fixed;
+  width: 100%;
+  top: 0;
   font-size: 14px;
   position: fixed;
   top: 0;
@@ -1128,6 +1131,9 @@ textarea {
   min-height: 100vh;
   background-color: #000000;
   color: #ffffff;
+  background-image: url(../img/hero/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .steps {
