--- a/css/sections/_hero.scss
+++ b/css/sections/_hero.scss
@@ -2,4 +2,7 @@
   min-height: 100vh;
   background-color: #000000;
   color: #ffffff;
+  background-image: url(../img/hero/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
