начал работу над первым экраном и доработал шапку сайта

--- a/css/activity/_header-sticky.scss
+++ b/css/activity/_header-sticky.scss
@@ -1,6 +1,8 @@
 .header-sticky {
   .header {
-    background-color: var(--balck);
+    background-color: var(--black);
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   .header__top {
     padding-top: 16px;
