--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,9 @@
 @import "./blocks/wrapper";
 @import "./blocks/title";
 @import "./blocks/button";
+@import "./blocks/logo";
+@import "./blocks/best-masters";
+@import "./blocks/heart";
 
 @import "./blocks/menu-button";
 @import "./blocks/navigation.scss";
