--- a/css/sections/_header.scss
+++ b/css/sections/_header.scss
@@ -1,17 +1,16 @@
 .header {
   transition: all 0.3s;
-  background-color: var(--balck);
+  background-color: transparent;
   color: var(--white);
-  position: fixed;
-  width: 100%;
-  top: 0;
-
-  font-size: 14px;
   position: fixed;
   top: 0;
   z-index: 999;
   width: 100%;
   max-width: 100%;
+  font-size: 14px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+
   &__top {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -26,7 +25,7 @@
     display: grid;
     align-items: center;
     gap: 16px;
-    grid-template-columns: auto auto 1fr auto auto;
+    grid-template-columns: auto 1fr auto;
     width: 100%;
     max-width: 100%;
   }
@@ -56,6 +55,10 @@
     display: none;
   }
   &__mobile-menu-button {
+    display: none;
+  }
+
+  .menu-button {
     display: none;
   }
 
