--- a/css/main.css
+++ b/css/main.css
@@ -549,7 +549,7 @@ textarea {
 }
 
 .wrapper {
-  max-width: 1415px;
+  max-width: 1220px;
   width: 100%;
   margin-inline: auto;
   padding-inline: 30px;
@@ -700,7 +700,7 @@ textarea {
   width: 11px;
   height: 11px;
   position: relative;
-  margin-inline: 10px;
+  margin-inline: 6px;
 }
 .heart::before {
   content: "";
@@ -712,6 +712,9 @@ textarea {
   position: absolute;
   top: -13px;
   left: -15px;
+}
+.heart--red::before {
+  background-image: url(../img/icon-heart-red.svg);
 }
 
 .menu-button {
@@ -798,6 +801,98 @@ textarea {
   .navigation__link {
     font-size: 16px;
   }
+}
+
+.section-label {
+  display: flex;
+  align-items: center;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 157%;
+  border: 1px solid rgba(69, 71, 71, 0.15);
+  border-radius: 100px;
+  padding: 10px 20px;
+  height: 42px;
+  padding: 6px 20px;
+  color: rgba(69, 71, 71, 0.15);
+}
+
+.card-item {
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 125%;
+  color: rgba(255, 242, 244, 0.55);
+  height: auto;
+  width: 100%;
+}
+.card-item__image {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.card-item__image img {
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.card-item__wrapper {
+  position: relative;
+  padding: 50px 45px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.card-item__name {
+  display: block;
+  margin: 0;
+  margin-bottom: auto;
+  flex-grow: 2;
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 110%;
+  color: #ebf3ff;
+}
+.card-item__text {
+  margin-top: 25px;
+  margin-bottom: 0;
+}
+.card-item .best-masters {
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin-left: auto;
+  margin-bottom: 50px;
+}
+.card-item__number {
+  display: block;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin: 0;
+  margin-bottom: 15px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 100%;
+  color: rgba(255, 242, 244, 0.25);
+}
+.card-item--mini {
+  color: rgba(255, 242, 244, 0.55);
+}
+.card-item--mini__wrapper {
+  padding: 40px 35px;
+}
+.card-item--mini__name {
+  font-size: 27px;
 }
 
 .form__grid {
@@ -969,6 +1064,9 @@ textarea {
 .header .menu-button {
   display: none;
 }
+.header .wrapper {
+  max-width: 1415px;
+}
 @media (max-width: 1279px) {
   .header__grid {
     grid-template-columns: auto 1fr auto auto;
@@ -1011,6 +1109,52 @@ textarea {
     max-width: max-content;
     margin-left: auto;
   }
+}
+
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.section__header {
+  display: grid;
+  gap: 32px;
+  grid-template-columns: repeat(12, 1fr);
+  margin-bottom: 60px;
+}
+.section__header-col {
+  grid-column: 6/12;
+}
+.section__card-group {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  width: 100%;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+.section__card-group--right {
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin-left: auto;
+  grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 20px;
+}
+.section__card-group--left {
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin-right: auto;
+  grid-template-columns: repeat(3, 1fr);
+}
+.section__subtitle {
+  margin: 0;
+}
+.section .wrapper {
+  position: relative;
+}
+.section .section-label {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .sections-group {
@@ -1238,6 +1382,23 @@ textarea {
   margin-bottom: 15px;
 }
 
+.advantages {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 129%;
+  color: rgba(69, 71, 71, 0.8);
+  padding-top: 130px;
+}
+.advantages .title {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 50px;
+  color: #454747;
+  margin: 0;
+  margin-bottom: 25px;
+}
+
 .steps {
   background-color: var(--black);
   background-image: url(../img/bg/bg.png);
@@ -1246,7 +1407,100 @@ textarea {
   background-position: bottom;
   border-radius: 32px;
   padding-top: 130px;
-  padding-bottom: 492px;
+  padding-bottom: 555px;
+}
+.steps .section-label {
+  color: rgba(245, 245, 245, 0.35);
+  border: 1px solid rgba(245, 245, 245, 0.35);
+}
+
+.reviews {
+  padding-bottom: 140px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 129%;
+  color: rgba(69, 71, 71, 0.8);
+  padding-top: 130px;
+}
+.reviews .title {
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 50px;
+  color: #454747;
+  margin: 0;
+  margin-bottom: 25px;
+}
+.reviews__grid {
+  display: grid;
+  gap: 32px;
+  grid-template-columns: 460px 1fr;
+  position: relative;
+}
+.reviews__grid::before {
+  content: "";
+  position: absolute;
+  bottom: -88px;
+  left: -80px;
+  right: -80px;
+  height: 315px;
+  background-image: url(../img/reviews/bg.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  z-index: 0;
+}
+.reviews__col-left {
+  position: relative;
+}
+.reviews__col-right {
+  position: relative;
+}
+.reviews__slider-min {
+  display: grid;
+  gap: 16px;
+  grid-template-columns: repeat(3, 1fr);
+}
+.reviews__slider-text {
+  margin-bottom: 40px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 129%;
+  color: rgba(69, 71, 71, 0.55);
+  font-style: normal;
+}
+.reviews__slider-text span {
+  display: flex;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin-bottom: 20px;
+  font-family: var(--font3);
+  font-weight: 400;
+  font-size: 18px;
+  color: #454747;
+  border: 1px solid rgba(69, 71, 71, 0.05);
+  border-radius: 100px;
+  padding: 15px 20px;
+  height: 50px;
+  line-height: 1;
+}
+.reviews__slider-text h3 {
+  display: block;
+  margin: 0;
+  margin-bottom: 20px;
+  font-family: var(--second-family);
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 100%;
+  color: #454747;
+}
+.reviews__slider-text cite {
+  font-style: normal;
+}
+.reviews__slider-text a {
+  text-decoration: underline;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
 }
 
 .footer {
