--- a/css/sections/_steps.scss
+++ b/css/sections/_steps.scss
@@ -7,5 +7,9 @@
 
   border-radius: 32px;
   padding-top: 130px;
-  padding-bottom: 492px;
+  padding-bottom: 555px;
+  .section-label {
+    color: rgba(245, 245, 245, 0.35);
+    border: 1px solid rgba(245, 245, 245, 0.35);
+  }
 }
