--- a/css/blocks/_wrapper.scss
+++ b/css/blocks/_wrapper.scss
@@ -1,5 +1,6 @@
 .wrapper {
-  max-width: calc(1355px + (30px * 2));
+  // max-width: calc(1355px + (30px * 2));
+  max-width: calc(1160px + (30px * 2));
   width: 100%;
   margin-inline: auto;
   padding-inline: 30px;
