--- a/css/sections/_header.scss
+++ b/css/sections/_header.scss
@@ -61,6 +61,9 @@
   .menu-button {
     display: none;
   }
+  .wrapper {
+    max-width: calc(1355px + (30px * 2));
+  }
 
   @media (max-width: 1279px) {
     &__grid {
