--- a/css/sections/_reviews.scss
+++ b/css/sections/_reviews.scss
@@ -22,11 +22,12 @@
     gap: 32px;
     grid-template-columns: 460px 1fr;
     position: relative;
+    align-items: flex-end;
 
     &::before {
       content: "";
       position: absolute;
-      bottom: -88px;
+      bottom: -116px;
       left: -80px;
       right: -80px;
       height: 315px;
