--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,7 @@
 @import "./blocks/navigation.scss";
 @import "./blocks/section-label";
 @import "./blocks/card-item";
+@import "./blocks/service-card";
 
 
 @import "./blocks/form";
@@ -35,6 +36,8 @@
 @import "./sections/advantages";
 @import "./sections/steps";
 @import "./sections/reviews";
+@import "./sections/services";
+@import "./sections/call-to-action";
 
 @import "./sections/footer";
 
