--- a/css/sections/_sections-group.scss
+++ b/css/sections/_sections-group.scss
@@ -1,6 +1,6 @@
 .sections-group {
   padding-top: 25px;
-  padding-bottom: 25px;
+  padding-bottom: 0;
   border-radius: 32px;
   padding-inline: 20px;
   margin-top: -32px;
